[package]
name = "klinke"
version = "0.1.0"
authors = ["whentze <muvlon@hentzes.de>"]
edition = "2018"

[dependencies]
generational-arena = "0.2.2"
crossbeam-channel = "0.3.8"
env_logger = "0.6.1"
log = "0.4.6"
petgraph = "0.4.13"
portaudio = "0.7.0"

[dev-dependencies.criterion]
version = "0.2.11"
features = ["real_blackbox"]

[[bench]]
name = "criterion"
harness = false
